acrescentadp texto CPF antes de CNPJ para empresas

--- a/spec/fixtures/myfiles/test.html
+++ b/spec/fixtures/myfiles/test.html
@@ -54,7 +54,7 @@
   A <b>Associação 207</b> com sede na comunidade de ..................., município de Cidade 825 - Estado 825, 
   inscrita no CNPJ/MF sob o nº 0001/0205, doravante denominada simplesmente <b>CONTRATANTE</b>, neste ato representada, 
   na forma do seu Estatuto Social, por seu Presidente – John Doe, inscrito no CPF/MF sob o 
-  nº 634.651.504-73 e a empresa Carls Max 105, inscrita no CNPJ/MF sob o 
+  nº 634.651.504-73 e a empresa Carls Max 105, inscrita no CPF/CNPJ sob o 
   nº 12.345.105-00 com sede na Rua Carlos Gomes, 123A, AP 34, 06202-592, Cidade 831, Estado 831, neste ato representada, na forma de seu contrato
   social, pelo seu John Doe, inscrito no CPF/MF sob o nº 375.518.217-32, 
   doravante denominada simplesmente <b>CONTRATADA</b>, resolvem celebrar o presente Termo de
